--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -20,8 +20,7 @@ FROM nginx:alpine
 RUN rm /etc/nginx/conf.d/default.conf
 
 # Copy build output
-COPY --from=build /app/dist /usr/share/nginx/html
-
+COPY --from=build /app/build/client /usr/share/nginx/html
 # Copy custom Nginx config
 COPY nginx.conf /etc/nginx/conf.d/default.conf
 
