--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -5,14 +5,22 @@ server {
     root /usr/share/nginx/html;
     index index.html;
 
-    # React Router v7 client-side routing
+    # Support for Prerendered HTML and Client-side Routing
     location / {
-        try_files $uri $uri/ /index.html;
+        try_files $uri $uri/ $uri.html /index.html;
     }
 
-    # Optional caching for static assets
-    location ~* \.(js|css|png|jpg|jpeg|gif|svg|ico|woff2?)$ {
+    # Better caching for Vite/React Router assets
+    location /assets/ {
+        expires 1y;
+        add_header Cache-Control "public, immutable";
+        access_log off;
+    }
+
+    # Standard caching for images/icons
+    location ~* \.(png|jpg|jpeg|gif|svg|ico|woff2?)$ {
         expires 30d;
+        add_header Cache-Control "public";
         access_log off;
     }
 }
